# pihole-group-man

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
pihole/: Cargo.toml  LICENSE
pihole/src/: api.rs  data.rs  error.rs
pihole/tests/: integration_test.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/common/: mod.rs
web/: 20-fire-tv-external.conf  Cargo.toml  README.md  execute.php  index.html
web/src/: lib.rs
