[package]
name = "pihole-group-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
rusqlite = { version = "0.30.0", features = ["bundled"] }
simple_logger = "4.3.0"
